Update src/test/java/cms/gov/madie/measure/resources/MeasureTransferControllerTest.java
Co-authored-by: Joe Kotanchik <56264529+jkotanchik-SB@users.noreply.github.com>